samples/_failures_safe/1761594507_1fd3bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f4a063b.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_6f4a063b.c:147:5: error: expected expression at end of input
  147 |     if (
      |     ^~
./samples/SAFE/__tmp_6f4a063b.c:147:5: error: expected declaration or statement at end of input
